--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/react": "^4.6.0",
     "framer-motion": "^10.2.3",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
+    "react-slick": "^0.29.0",
     "react-spotify-embed": "^2.0.3",
-    "react-type-animation": "^2.1.2"
+    "react-type-animation": "^2.1.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.1.0",
+    "tw-elements": "^1.0.0-beta1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
